[package]
name = "evm_rpc_test_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
candid_parser = "0.1.4"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.204"
serde_bytes = "0.11.15"
serde_json = "1.0.120"
